# swagger.yml
@@ -115,11 +115,15 @@ paths:
             $ref: "#/definitions/error"
             
             
-  "/ticket/getTicket/lot/{lotId}":
+  "/ticket/getTicket/lot/{lotId}/carSize/{carSize}":
     parameters:
       - type: integer
         format: int64
         name: lotId
+        in: path
+        required: true
+      - type: string
+        name: carSize
         in: path
         required: true
     get:
